# memory-benchmark

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
memory_benchmark/: __init__.py  __main__.py  runner.py
memory_benchmark/adapters/: __init__.py  base.py  mempalace.py  memsearch.py  ogmemory.py
memory_benchmark/benchmarks/: __init__.py  base.py  locomo.py
memory_benchmark/metrics/: __init__.py  qa.py  retrieval.py
memory_benchmark/reporters/: __init__.py  json.py  markdown.py
memory_benchmark/reports/: locomo_benchmark_20260522_160615.json  locomo_benchmark_20260522_160615.md
scripts/: benchmark.sh
src/: runner.py
src/adapters/: mempalace.py  memsearch.py  ogmemory.py
src/benchmarks/: base.py  locomo.py
src/metrics/: performance.py
